fixed text issue with place card when the title was too long it would offset everything else

--- a/src/_text-styles.scss
+++ b/src/_text-styles.scss
@@ -135,3 +135,11 @@
 	color: $primary;
 	margin-left: 50.5px;
 }
+.place-title {
+	font-family: Nunito-Medium;
+	font-size: 21px;
+	color: #354052;
+	line-height: 22px;
+	// margin: 15px auto 5px auto;
+	text-align: center;
+}
